--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -4,7 +4,7 @@
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h1 class="mb-0">Campgrounds</h1>
             <% if(currentUser){ %>
-                <a class="btn btn-primary" href="/campgrounds/new">Add new campground</a>
+                <a class="btn btn-primary btn-md-lg btn-sm" href="/campgrounds/new">Add new campground</a>
                 <% } %>
         </div>
 
