--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">
                 <h3 class="text-center mb-4">Edit Campground</h3>
-                <form action="/campgrounds/<%= camp._id %>?_method=PUT" method="post" novalidate
+                <form action="/campgrounds/<%= camp._id %>/edit?_method=PUT" method="post" novalidate
                     class="needs-validation">
                     <div class="mb-3">
                         <label class="form-label" for="title">Title</label>
