--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">
                 <h3 class="text-center mb-4">Add New Campground</h3>
-                <form action="/campgrounds" method="post" novalidate class="needs-validation">
+                <form action="/campgrounds/new" method="post" novalidate class="needs-validation">
                     <div class="mb-3">
                         <label class="form-label" for="title">Title</label>
                         <input class="form-control" type="text" id="title" name="camp[title]" required>
